--- a/features/usermeet.core/plugin.xml
+++ b/features/usermeet.core/plugin.xml
@@ -11,7 +11,7 @@
 	<!-- Plugin Dependencies -->
 	
 	<dependencies>
-		<require plugin_id="cerberusweb.core" version="5.0.0-beta" />
+		<require plugin_id="cerberusweb.core" version="5.0.0-rc2" />
 	</dependencies>
 
 	<!-- Patches -->
@@ -23,6 +23,7 @@
 		<patch version="4.3.0" revision="15" file="patches/4.3.0.php" />
 		<patch version="4.3.1" revision="16" file="patches/4.3.1.php" />
 		<patch version="5.0.0-beta" revision="19" file="patches/5.0.0_beta.php" />
+		<patch version="5.0.0-rc2" revision="20" file="patches/5.0.0_rc2.php" />
 	</patches>
 	
 	<!-- Exported Classes -->
